--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,18 @@
-
 # dependencies
 node_modules
 .pnp
 .pnp.js
 
-# testing
-coverage
-
 # next.js
-.next/
-out/
+.next
+out
 
-# production
-build
+# env
+.env
+.env.local
 
 # misc
 .DS_Store
-*.log
-.env
-.env.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
