--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "4.4.1",
+    "autoprefixer": "10.4.20",
+    "clsx": "2.1.1",
     "next": "14.2.5",
+    "postcss": "8.4.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "tailwindcss": "3.4.10",
-    "postcss": "8.4.47",
-    "autoprefixer": "10.4.20",
-    "@emailjs/browser": "4.4.1",
-    "clsx": "2.1.1"
+    "tailwindcss": "3.4.10"
   },
   "devDependencies": {
+    "@types/node": "^24.3.1",
+    "@types/react": "^19.1.12",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
     "typescript": "5.5.4"
